<resources>
    <string name="app_name">Demo My Login App</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="this_is_to_type_username">This is to type username</string>
    <string name="demo_my_login_app">Demo My Login App</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="e_mail">E-mail</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="male_or_female">Male or Female</string>
    <string name="register">Register</string>

</resources>

